# agent-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agent/: payment_worker.py
client/: app_cli.py  dpop_keys.json
gateway/: main.py
gateway/audit/: writer.py
gateway/auth/: dpop_verify.py  jwt_utils.py  password_stepup.py  password_store.json  scopes.py  webauthn_flow.py
gateway/policy/: policy_engine.py
mcp/: server.py
opa/: policy.rego
scripts/: run_all.sh
