[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-payment"
version = "0.1.0"
description = "Secure Payment Agent demo with FastAPI, OAuth 2.1, DPoP, simulated WebAuthn step-up, OPA-like policy, and MCP integration."
authors = [
    { name = "Edward Cheng", email = "edwardgem@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "httpx>=0.27.2",
    "cryptography>=43.0.1",
    "pyjwt>=2.9.0",
    "python-dateutil>=2.9.0"
]

[project.urls]
Homepage = "https://github.com/edwardgem/agent-demo"
Repository = "https://github.com/edwardgem/agent-demo"
Issues = "https://github.com/edwardgem/agent-demo/issues"

[tool.setuptools]
packages = ["gateway", "client", "agent", "mcp"]

[tool.setuptools.package-dir]
gateway = "gateway"
client = "client"
agent = "agent"
mcp = "mcp"

